<resources>
    <string name="app_name">lab09</string>
    <string name="dialogCr">Выберете функцию</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="asin">aSin</string>
    <string name="acos">aCos</string>
    <string name="txtpoints" />
    <string name="txtxmin" />
    <string name="txtxmax" />
    <string name="CreateGraph">Создать график</string>
    <string name="but_points">Ввести другие значения</string>
</resources>